feat: Refinamiento visual

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
             <div class="iconsContent">
               <div class="header-iconsContent">
                 <a href="#">
-                  <img src="https://cdn.discordapp.com/attachments/776566660315349012/779467014355419146/aqq.png" alt="Discord icon" class="circle">
+                  <img src="./../public/images/logos/Discord.webp" alt="Discord icon" class="circle">
                 </a>
               </div>
               <div class="separador-iconsContent"></div>
@@ -80,9 +80,9 @@
 
                   <div class="profile-tag">
                     <span class="profile-username-footer">
-                      <%=user.username%>
+                      @<%=user.username%>
                     </span>
-                    <span class="profile-discrim-footer">#<%=user.discriminator%></span>
+                    <span class="profile-id-footer">ID: <%=user.id%></span>
                   </div>
                   <span class="profile-footer-icons">
                     <i class="material-icons">mic</i>
