clean: Eliminación de Elementos Innecesarios

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,11 +84,13 @@
                     </span>
                     <span class="profile-id-footer">ID: <%=user.id%></span>
                   </div>
+                  <!-- No creo que se use esto xd y quita espacio
                   <span class="profile-footer-icons">
                     <i class="material-icons">mic</i>
                     <i class="material-icons">headset</i>
                     <i class="material-icons">settings</i>
                   </span>
+                  -->
 
                 </div>
               </div>
